# tabcat

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  classes.hpp  control  manpage.groff  parse.hpp  table.cpp  table.sh  unicode.hpp
script/: build.sh  deb.sh  table.sh  test.sh  test_args.sh
src/: app_settings.hpp  argument.hpp  delimiter.hpp  disable_border.hpp  file.hpp  format.hpp  help.hpp  highlight.hpp  io.hpp  locale.hpp  main.cpp  options.hpp  output_file.hpp  parse.hpp  printer.hpp  tabcat.cpp  table.cpp  table.hpp  terminal.hpp  unicode.hpp  version.hpp
src/include/: colorize.hpp  invalid_table.hpp  parser.hpp  printer.hpp  table.hpp  terminal.hpp  unicode.hpp  utils.hpp
